--- a/shop.html
+++ b/shop.html
@@ -43,7 +43,7 @@
     <img class="chicken" name="chickenImg" src="resources/images/chicken.png">
   </div>
 
-  <script src="resources/js/animations.js"></script>
+  <script src="resources/js/main/animations.js"></script>
 
   <script src="resources/js/shop/gatherDom.js"></script>
   <script src="resources/js/shop/variables.js"></script>
